# mini-rabbit

./: .gitignore  Cargo.toml  logging_config.yaml
src/: main.rs
src/rabbitmq/: connection.rs  handlers.rs  messages.rs  mod.rs  payload.rs
