[package]
name = "mini-rabbit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-codec = "0.4"
actix-http = "3.0.0-beta.11"
actix-rt = "2.5"
actix-web-actors = "4.0.0-beta.7"
lapin = { version = "2.0", features=["openssl"] }
log4rs = "*"
dotenv = "*"
log = "*"
uuid = "*"
serde = "*"
serde_json = "*"
futures = "0.3.21"
